airflow-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: airflow-deploy
  labels:
    run: airflow
spec:
  selector:
    matchLabels:
      run: airflow
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: airflow
    spec:
      containers:
      - image: <your-image>:<tag>
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: dags
            mountPath: /usr/local/airflow/dags
      imagePullSecrets:
       - name: airflow-secret
      volumes:
       - name: dags
         azureFile:
           secretName: azure-secret
           shareName: airflow-dags
           readOnly: false
