airflow-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: airflow-deploy
          servicePort: 8080
        path: /(.*)
~
~
